<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<TextView
		android:id="@+id/idname"
		android:layout_width="wrap_content"
		android:layout_alignParentTop="true"
		android:textColor="@color/white_textcolor"
		android:textStyle="bold"
		android:text="@string/wind_turbine_id"
		style="@style/listview_child_text_style">
	</TextView>
	<TextView
		android:id="@+id/idvalue"
		android:layout_width="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="false"
		android:layout_toRightOf="@id/idname"
		android:textColor="@color/white_textcolor"
		android:text="Text"
		style="@style/listview_child_text_style">
	</TextView>
	<TextView
		android:id="@+id/typename"
		android:layout_width="wrap_content"
		android:layout_below="@id/idname"
		android:textColor="@color/white_textcolor"
		android:textStyle="bold"
		android:text="@string/turbine_type"
		style="@style/listview_child_text_style">
	</TextView>
	<TextView
		android:id="@+id/typevalue"
		android:layout_width="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@id/idname"
		android:layout_toRightOf="@id/typename"
		android:textColor="@color/white_textcolor"
		android:text="Text"
		style="@style/listview_child_text_style">
	</TextView>
	<TextView
		android:id="@+id/studyname"
		android:layout_width="wrap_content"
		android:layout_below="@id/typename"
		android:textColor="@color/white_textcolor"
		android:textStyle="bold"
		android:text="@string/wind_turbine_study"
		style="@style/listview_child_text_style">
	</TextView>
	<TextView
		android:id="@+id/studyvalue"
		android:layout_width="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@id/typename"
		android:layout_toRightOf="@id/studyname"
		android:textColor="@color/white_textcolor"
		android:text="Text"
		style="@style/listview_child_text_style">
	</TextView>
</RelativeLayout>
