<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/reportlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:layout_margin="@dimen/margin2"
	android:background="@android:color/transparent"
    android:clickable="true">

    <RelativeLayout
		android:id="@+id/headerlayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="@dimen/margin3">
		<TextView
			android:id="@+id/turbineidname"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="false"
			android:paddingBottom="@dimen/zero_value"
			android:textColor="@color/dark_textcolor"
			android:text="@string/wind_turbine_id"
			android:textStyle="bold"
			style="@style/spinner_text_style"/>
		<TextView
			android:id="@+id/turbineidvalue"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/turbineidname"
			android:layout_centerVertical="false"
			android:paddingTop="@dimen/zero_value"
			android:textColor="@color/dark_textcolor"
			android:text="@string/n_a"
			style="@style/spinner_text_style"/>
	</RelativeLayout>
	
 	<View
 	    android:id="@+id/divider"
		android:background="@color/dialog_stroke"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/height1"
 	    android:paddingTop="@dimen/padding2"
 	    android:layout_below="@id/headerlayout">
	</View>

		
	<RelativeLayout
		android:id="@+id/footerlayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/divider"
		android:layout_alignParentLeft="true">
	 	<ToggleButton
			android:id="@+id/editattribbutton"
			android:layout_alignParentLeft="true"
	    	android:layout_centerVertical="true"
	    	android:background="@drawable/edit_attrib_button_selector"
	    	android:textOn=""
	    	android:textOff=""
	    	android:text=""
	    	style="@style/transparent_button_style">
		</ToggleButton>
		<TextView
			android:id="@+id/turbinetypename"
			android:layout_centerVertical="false"
			android:layout_toRightOf="@id/editattribbutton"
			android:paddingBottom="@dimen/zero_value"
			android:textColor="@color/dark_textcolor"
			android:text="@string/turbine_type"
			android:textStyle="bold"
			style="@style/spinner_text_style"/>
		<TextView
			android:id="@+id/turbinetypevalue"
			android:layout_toRightOf="@id/editattribbutton"
			android:layout_below="@id/turbinetypename"
			android:layout_centerVertical="false"
			android:paddingTop="@dimen/zero_value"
			android:textColor="@color/dark_textcolor"
			android:text="@string/n_a"
			style="@style/spinner_text_style"/>
	</RelativeLayout>
</RelativeLayout>
